--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -1,22 +1,22 @@
 /**
- * Syntax highlighting styles
+ * Syntax highlighting styles - Updated for dark mode support
  */
 .highlight {
-  background: #fff;
+  background: var(--highlight-bg);
   @extend %vertical-rhythm;
 
   .highlighter-rouge & {
-    background: #eef;
+    background: var(--highlight-rouge-bg);
   }
 
-  .c     { color: #998; font-style: italic } // Comment
-  .err   { color: #a61717; background-color: #e3d2d2 } // Error
-  .k     { font-weight: bold } // Keyword
-  .o     { font-weight: bold } // Operator
-  .cm    { color: #998; font-style: italic } // Comment.Multiline
-  .cp    { color: #999; font-weight: bold } // Comment.Preproc
-  .c1    { color: #998; font-style: italic } // Comment.Single
-  .cs    { color: #999; font-weight: bold; font-style: italic } // Comment.Special
+  .c     { color: var(--syntax-comment); font-style: italic } // Comment
+  .err   { color: var(--syntax-error); background-color: var(--syntax-error-bg, transparent) } // Error
+  .k     { color: var(--syntax-keyword); font-weight: bold } // Keyword
+  .o     { color: var(--syntax-operator); font-weight: bold } // Operator
+  .cm    { color: var(--syntax-comment); font-style: italic } // Comment.Multiline
+  .cp    { color: var(--syntax-comment); font-weight: bold } // Comment.Preproc
+  .c1    { color: var(--syntax-comment); font-style: italic } // Comment.Single
+  .cs    { color: var(--syntax-comment); font-weight: bold; font-style: italic } // Comment.Special
   .gd    { color: #000; background-color: #fdd } // Generic.Deleted
   .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
   .ge    { font-style: italic } // Generic.Emph
@@ -34,18 +34,18 @@
   .kp    { font-weight: bold } // Keyword.Pseudo
   .kr    { font-weight: bold } // Keyword.Reserved
   .kt    { color: #458; font-weight: bold } // Keyword.Type
-  .m     { color: #099 } // Literal.Number
-  .s     { color: #d14 } // Literal.String
-  .na    { color: #008080 } // Name.Attribute
-  .nb    { color: #0086B3 } // Name.Builtin
-  .nc    { color: #458; font-weight: bold } // Name.Class
-  .no    { color: #008080 } // Name.Constant
+  .m     { color: var(--syntax-number) } // Literal.Number
+  .s     { color: var(--syntax-string) } // Literal.String
+  .na    { color: var(--syntax-name-attr) } // Name.Attribute
+  .nb    { color: var(--syntax-name-builtin) } // Name.Builtin
+  .nc    { color: var(--syntax-name-class); font-weight: bold } // Name.Class
+  .no    { color: var(--syntax-name-variable) } // Name.Constant
   .ni    { color: #800080 } // Name.Entity
-  .ne    { color: #900; font-weight: bold } // Name.Exception
-  .nf    { color: #900; font-weight: bold } // Name.Function
-  .nn    { color: #555 } // Name.Namespace
-  .nt    { color: #000080 } // Name.Tag
-  .nv    { color: #008080 } // Name.Variable
+  .ne    { color: var(--syntax-name-function); font-weight: bold } // Name.Exception
+  .nf    { color: var(--syntax-name-function); font-weight: bold } // Name.Function
+  .nn    { color: var(--syntax-name-namespace) } // Name.Namespace
+  .nt    { color: var(--syntax-name-tag) } // Name.Tag
+  .nv    { color: var(--syntax-name-variable) } // Name.Variable
   .ow    { font-weight: bold } // Operator.Word
   .w     { color: #bbb } // Text.Whitespace
   .mf    { color: #099 } // Literal.Number.Float
